--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "gulp",
-  "version": "1.0.0",
+  "name": "portfo",
+  "version": "2.4.3",
   "main": "index.js",
   "license": "MIT",
+  "resolutions": {
+    "graceful-fs": "4.2.4"
+  },
+  "scripts": {
+    "preinstall": "npx npm-force-resolutions"
+  },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
