--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-ejs": "^4.1.2",
     "gulp-hash": "^4.2.2",
+    "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
