upgrade to gulp v4

--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "2.4.3",
   "main": "index.js",
   "license": "MIT",
-  "resolutions": {
-    "graceful-fs": "4.2.4"
-  },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions"
+    "watch": "gulp watch"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
-    "gulp": "3.9.1",
+    "gifsicle": "^5.1.0",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
