--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "watch": "gulp watch"
+    "build": "gulp build",
+    "watch": "gulp"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
